Fix JWT role based authorization